# FDK-CT-Algorithm

./: CMakeLists.txt  README.md  midplane.txt  phantom_ground_truth.npy  reconstruction.npy  test.py
include/: fdk.h  phantom.h
src/: fdk.cpp  main.cpp  phantom.cpp
